fix(search-engine): resolve the toggle visibility of filters and hide it from landing header

--- a/packages/search-engine/src/components/Filters/PriceFilter/PriceFilter.module.scss
+++ b/packages/search-engine/src/components/Filters/PriceFilter/PriceFilter.module.scss
@@ -11,6 +11,7 @@
       color: #666666;
       font-size: 14px;
       line-height: 21px;
+      user-select: none;
     }
     & .price {
       display: flex;
