--- a/packages/search-engine/src/components/Header/Header.css
+++ b/packages/search-engine/src/components/Header/Header.css
@@ -93,20 +93,6 @@
   width: 590px;
 }
 
-.filter {
-  height: 48px;
-  padding: 0 20px;
-  border: 1px solid var(--color-main);
-  border-radius: 24px;
-}
-
-.filter > p {
-  display: block;
-  line-height: 1;
-  color: var(--color-font-alt);
-}
-
-.filter > p span {
-  /*simulando el icono*/
-  font-weight: bold;
+.filter__container.hidden {
+  display: none;
 }
